--- a/app/src/main/res/layout/activity_new_report.xml
+++ b/app/src/main/res/layout/activity_new_report.xml
@@ -11,6 +11,7 @@
     <include layout="@layout/toolbar"/>
 
     <TextView
+        android:id="@+id/new_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
@@ -80,12 +81,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginHorizontal="20dp"
-        android:horizontalSpacing="10dp"
-        android:isScrollContainer="false"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="10dp" />
+        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="25dp"
+        android:isScrollContainer="false" />
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/new_add_picture"
@@ -111,7 +110,7 @@
         android:layout_marginTop="15dp"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/darkGray"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="@color/button_color"
         android:text="@string/createReport"/>
 
 
