--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -6,8 +6,9 @@
 
     <ImageView
         android:id="@+id/gallery_item_image"
-        android:layout_marginRight="10dp"
-        android:layout_width="109dp"
-        android:layout_height="109dp" />
+        android:layout_width="120dp"
+        android:layout_height="170dp"
+        android:scaleType="centerCrop"
+        android:layout_marginEnd="8dp"/>
 
 </LinearLayout>
