--- a/app/src/main/res/layout/activity_report_list.xml
+++ b/app/src/main/res/layout/activity_report_list.xml
@@ -10,14 +10,15 @@
 
     <include layout="@layout/toolbar"/>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <!--<ScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1">-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="vertical">-->
             <android.support.v7.widget.SwitchCompat
                 style="@style/SwitchCompatStyle"
                 android:id="@+id/list_only_near"
@@ -50,16 +51,16 @@
                 android:background="@color/darkGray"/>
 
             <ListView
+                android:id="@+id/list_reports"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_weight="1"/>
-        </LinearLayout>
+                android:layout_weight="1"
+                android:layout_marginHorizontal="20dp" />
+        <!--</LinearLayout>-->
 
-    </ScrollView>
+    <!--</ScrollView>-->
 
     <View
-        android:id="@+id/list_reports"
         android:layout_width="fill_parent"
         android:layout_height="2dp"
         android:layout_marginTop="15dp"
