--- a/app/src/main/res/layout/report_list_line.xml
+++ b/app/src/main/res/layout/report_list_line.xml
@@ -6,19 +6,28 @@
 
     <ImageView
         android:id="@+id/list_item_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_bache"/>
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_weight="1"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:src="@drawable/ic_bache"
+        android:layout_gravity="center_vertical"/>
 
     <TextView
         android:id="@+id/list_item_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="test"/>
+        android:layout_weight="4"
+        android:text="test"
+        android:layout_gravity="center_vertical"
+        android:textColor="@color/darkGray"/>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_info"/>
+        android:layout_weight="1"
+        android:src="@drawable/ic_info"
+        android:layout_gravity="center_vertical"/>
 
 </LinearLayout>
