--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".LoginRegisterActivity"
+    tools:context=".Activities.LoginRegisterActivity"
     android:background="@color/colorBackground"
     android:padding="20dp">
 
