--- a/app/src/main/res/layout/activity_new_report.xml
+++ b/app/src/main/res/layout/activity_new_report.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".NewReportActivity"
+    tools:context=".Activities.NewReportActivity"
     android:background="@color/colorBackground">
 
     <include layout="@layout/toolbar"/>
