--- a/app/src/main/res/layout/activity_report_detail.xml
+++ b/app/src/main/res/layout/activity_report_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".NewReportActivity"
+    tools:context=".Activities.NewReportActivity"
     android:background="@color/colorBackground">
 
     <include layout="@layout/toolbar"/>
@@ -117,7 +117,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="@color/darkGray"
-            app:backgroundTint="@color/white"
+            app:backgroundTint="@color/button_color"
             android:text="@string/supportReport"/>
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/already_fixed_button"
@@ -125,7 +125,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="@color/darkGray"
-            app:backgroundTint="@color/white"
+            app:backgroundTint="@color/button_color"
             android:text="@string/alreadyFixed"/>
     </LinearLayout>
 
