--- a/app/src/main/res/layout/activity_report_detail.xml
+++ b/app/src/main/res/layout/activity_report_detail.xml
@@ -69,7 +69,7 @@
         android:layout_marginTop="5dp"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/darkGray"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="@color/button_color"
         android:text="@string/detailMap"/>
 
     <View
@@ -97,7 +97,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/darkGray"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="@color/button_color"
         android:text="@string/addPicture"/>
 
     <View
