--- a/app/src/main/res/layout/activity_new_report.xml
+++ b/app/src/main/res/layout/activity_new_report.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,111 +7,116 @@
     android:orientation="vertical"
     tools:context=".Activities.NewReportActivity"
     android:background="@color/colorBackground">
-
-    <include layout="@layout/toolbar"/>
-
-    <TextView
-        android:id="@+id/new_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="15dp"
-        android:text="@string/location"
-        android:textColor="@color/darkGray"/>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp">
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/actual_location_button"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/colorBackground">
+
+        <include layout="@layout/toolbar"/>
+
+        <TextView
+            android:id="@+id/new_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/darkGray"
-            app:backgroundTint="@color/white"
-            android:text="@string/actualLocation"/>
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/other_location_button"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/location"
+            android:textColor="@color/darkGray"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp">
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/actual_location_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/darkGray"
+                app:backgroundTint="@color/white"
+                android:text="@string/actualLocation"/>
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/other_location_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/darkGray"
+                app:backgroundTint="@color/white"
+                android:text="@string/otherLocation"/>
+        </LinearLayout>
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/reportType"
+            android:textColor="@color/darkGray"/>
+        <Spinner
+            android:id="@+id/new_report_type_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="5dp"
+            android:textColor="@color/darkGray"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/description"
+            android:textColor="@color/darkGray"/>
+        <EditText
+            android:id="@+id/new_description_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:textColor="@color/darkGray"/>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="15dp"
+            android:background="@color/lightGray"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/new_photo_gallery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="25dp"
+            android:isScrollContainer="false" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/new_add_picture"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_gravity="center_horizontal"
             android:textColor="@color/darkGray"
             app:backgroundTint="@color/white"
-            android:text="@string/otherLocation"/>
+            android:text="@string/addPicture"/>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="15dp"
+            android:background="@color/lightGray"/>
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/new_create_report"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/darkGray"
+            app:backgroundTint="@color/button_color"
+            android:text="@string/createReport"/>
+
     </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="15dp"
-        android:text="@string/reportType"
-        android:textColor="@color/darkGray"/>
-    <Spinner
-        android:id="@+id/new_report_type_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="5dp"
-        android:textColor="@color/darkGray"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="15dp"
-        android:text="@string/description"
-        android:textColor="@color/darkGray"/>
-    <EditText
-        android:id="@+id/new_description_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:textColor="@color/darkGray"/>
-
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="2dp"
-        android:layout_marginTop="15dp"
-        android:background="@color/lightGray"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/new_photo_gallery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="25dp"
-        android:isScrollContainer="false" />
-
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/new_add_picture"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/darkGray"
-        app:backgroundTint="@color/white"
-        android:text="@string/addPicture"/>
-
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="2dp"
-        android:layout_marginTop="15dp"
-        android:background="@color/lightGray"/>
-
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/new_create_report"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/darkGray"
-        app:backgroundTint="@color/button_color"
-        android:text="@string/createReport"/>
-
-
-</LinearLayout>
+</ScrollView>
