--- a/app/src/main/res/layout/report_list_line.xml
+++ b/app/src/main/res/layout/report_list_line.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,24 +8,27 @@
         android:id="@+id/list_item_icon"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_weight="1"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:layout_gravity="center_vertical"/>
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"/>
 
     <TextView
         android:id="@+id/list_item_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="4"
-        android:layout_gravity="center_vertical"
-        android:textColor="@color/darkGray"/>
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/list_item_icon"
+        android:textColor="@color/darkGray"
+        android:layout_marginStart="5dp"/>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:src="@drawable/ic_info"
-        android:layout_gravity="center_vertical"/>
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:adjustViewBounds="false"
+        android:cropToPadding="false"
+        android:src="@drawable/ic_info" />
 
-</LinearLayout>
+</RelativeLayout>
